--- a/frontend/Proyecto/src/app/componentes/empresa/vista-empresa/vista-empresa.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/vista-empresa/vista-empresa.component.css
@@ -4,17 +4,6 @@
     width: 1125px;
 }
 
-#caja{
-    display: flex;
-    background-color: black;
-    height: 120px;
-    border-bottom-right-radius: 18% 75%;
-}
-
-#title{
-    font-weight: bold;
-}
-
 #formulario{
     display: flex;
     /* justify-content: center; */
@@ -45,3 +34,46 @@
 .cargaArchivo label:first-child{
     color: black;
 }
+
+.input-campos{
+    border-radius: 50px;
+    width:90%;
+    margin-left: 5%;
+    color:#39418a;
+    font-weight: bold;
+}
+.label-campos{
+    font-weight: 1000;
+    font-size: 16px;
+    color: #00b4c3;
+    margin-left: 8%;
+    opacity:1 !important;
+  }
+
+  .button-guardar{
+    color:white;
+    background-color: #ED8337;
+    border-radius: 35px;
+    width: 12%;
+    margin-left: 45%;
+    padding: 1% 2% 1% 2%
+  }
+
+  #titulo-perfil{
+      background-color: #00b4c3;
+      width: 350px;
+      height: 75px;
+      margin-top: 35px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      flex-direction: column;
+      color:white;
+      font-weight: initial;
+  }
+
+  #container-titulo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
