Aplicación de estilos en seccion de perfil, cambio de contraseña, olvido y restablecimiento de la contraseña del sistema

--- a/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
@@ -1,42 +1,51 @@
 <div id="container" class="vh-100">
     <div id="cliente" class="w-100">
-        <div id="caja"></div>
-        <div>
-            <h1  id="title" class="text-center mt-5 mb-4" >Cambiar Contraseña</h1>
+        <div id="container_title" class="d-flex justify-content-center align-items-center card-header">
+            <div id="title" class="col-lg-5">
+                <h1 id="titleH1" class="text-center font-weight-light my-4 mt-2 mb-4">Cambiar Contraseña</h1>
+            </div>
         </div>
-        <form #form id="miform" autocomplete="off" novalidate #formRef="ngForm" [formGroup]="changePassword"(ngSubmit)="actualizar(changePassword.value)">
+        <form #form id="miform" autocomplete="off" novalidate #formRef="ngForm" [formGroup]="changePassword"
+            (ngSubmit)="actualizar(changePassword.value)">
             <div class="row mb-3" id="formulario">
-                <div id="campos">
-                    <div class="col-md-5 mt-4 mb-4 w-50">
+                <div id="campos" class="pt-2">
+                    <div class="mt-5 mb-4">
                         <div class="form-floating">
-                            <div class = "d-flex align-items-center">
+                            <div class="d-flex align-items-center">
+                                <mat-icon class="icon-vpn_key">lock</mat-icon>
                                 <div class="form-floating w-100">
-                                    <input matInput [type]="hideAct ? 'password' : 'text'" class="form-control" id="inputActualPassword" name="actualPassword"
-                                    formControlName="actual_password" placeholder="Ingrese una contraseña">
-                                    <label for = "inputActualPassword">Contraseña Actual</label>
+                                    <input matInput [type]="hideAct ? 'password' : 'text'" class="form-control"
+                                        id="inputActualPassword" name="actualPassword" formControlName="actual_password"
+                                        placeholder="Ingrese una contraseña">
+                                    <label class="label-campos" for="inputActualPassword">Contraseña Actual</label>
                                 </div>
-                                <a class ="icon-password" mat-icon-button matSuffix (click)="hideAct = !hideAct" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                <a class="icon-password" mat-icon-button matSuffix (click)="hideAct = !hideAct"
+                                    [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                                     <mat-icon>{{hideAct ? 'visibility_off' : 'visibility'}}</mat-icon>
                                 </a>
                             </div>
-                            <span class="lead error" *ngIf="(formRef.submitted  && changePassword.get('actual_password')?.hasError('required')) || changePassword.get('actual_password')?.hasError('minlength')">
+                            <span class="lead error"
+                                *ngIf="(formRef.submitted  && changePassword.get('actual_password')?.hasError('required')) || changePassword.get('actual_password')?.hasError('minlength')">
                                 La contraseña no coincide</span>
                         </div>
                     </div>
-                    <div class="col-md-5 mb-4 w-50">
-                        
+                    <div class="d-flex align-items-center mb-4">
+                        <mat-icon class="icon-vpn_key"> vpn_key</mat-icon>
                         <div class="form-floating">
-                            <div class = "d-flex align-items-center">
+                            <div class="d-flex align-items-center">
                                 <div class="form-floating w-100">
-                                    <input #password matInput [type]="hide ? 'password' : 'text'" class="form-control" id="inputNewPassword" name="newpassword"
-                                    formControlName="password" placeholder="Ingrese una contraseña" maxlength="24">
-                                    <label for = "inputNewPassword">Contraseña Nueva</label>
+                                    <input #password matInput [type]="hide ? 'password' : 'text'" class="form-control"
+                                        id="inputNewPassword" name="newpassword" formControlName="password"
+                                        placeholder="Ingrese una contraseña" maxlength="24">
+                                    <label class="label-campos" for="inputNewPassword">Contraseña Nueva</label>
                                 </div>
-                                <a class ="icon-password" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                <a class="icon-password" mat-icon-button matSuffix (click)="hide = !hide"
+                                    [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                                 </a>
                             </div>
-                            <span class="lead error" *ngIf="(formRef.submitted  && changePassword.get('password')?.hasError('required')) || changePassword.get('password')?.hasError('pattern')">
+                            <span class="lead error"
+                                *ngIf="(formRef.submitted  && changePassword.get('password')?.hasError('required')) || changePassword.get('password')?.hasError('pattern')">
                                 Ingrese una contraseña que contenga:<br>
                                 ◆ Al menos 1 Minuscula<br>
                                 ◆ Al menos 1 Mayúscula<br>
@@ -45,25 +54,30 @@
                                 ◆ Mínimo 8 caracteres</span>
                         </div>
                     </div>
-                    <div class="col-md-5 mb-4 w-50">
+                    <div class="d-flex align-items-center mb-4">
+                        <mat-icon class="icon-vpn_key"> vpn_key</mat-icon>
                         <div class="form-floating">
-                            <div class = "d-flex align-items-center">
+                            <div class="d-flex align-items-center">
                                 <div class="form-floating w-100">
-                                    <input matInput [type]="hideConf ? 'password' : 'text'" class="form-control" id="inputConfPassword" name="confPassword"
-                                    formControlName="confpassword" placeholder="Ingrese su contraseña nuevamente" maxlength="24">
-                                    <label for="inputConPassword">Confirmar Contraseña</label>
+                                    <input matInput [type]="hideConf ? 'password' : 'text'" class="form-control"
+                                        id="inputConfPassword" name="confPassword" formControlName="confpassword"
+                                        placeholder="Ingrese su contraseña nuevamente" maxlength="24">
+                                    <label class="label-campos" for="inputConPassword">Confirmar Contraseña</label>
                                 </div>
-                                <a class ="icon-password" mat-icon-button matSuffix (click)="hideConf = !hideConf" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                <a class="icon-password" mat-icon-button matSuffix (click)="hideConf = !hideConf"
+                                    [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                                     <mat-icon>{{hideConf ? 'visibility_off' : 'visibility'}}</mat-icon>
                                 </a>
                             </div>
                             <!-- <span class="lead error"*ngIf="validacionPassword()">La contraseñas no coinciden</span> -->
-                            <span class="lead error" *ngIf="(formRef.submitted  && changePassword.get('confpassword')?.hasError('required')) || changePassword.get('confpassword')?.hasError('pattern') || validacionPassword()">
+                            <span class="lead error"
+                                *ngIf="(formRef.submitted  && changePassword.get('confpassword')?.hasError('required')) || changePassword.get('confpassword')?.hasError('pattern') || validacionPassword()">
                                 Las contraseñas no coinciden</span>
                         </div>
                     </div>
                     <div class="col-md-5 mb-4 w-50 text-center">
-                        <input type="submit" value="Actualizar" [disabled]="formRef.invalid || validacionPassword()" class="btn btn-primary btn-block w-75">
+                        <input type="submit" value="Actualizar" [disabled]="formRef.invalid || validacionPassword()"
+                            class="btn btn-primary btn-block w-75 button-actualizar">
                     </div>
                 </div>
             </div>
