--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/olvido-password/olvido-password.component.css
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/olvido-password/olvido-password.component.css
@@ -1,3 +1,40 @@
+#container{
+    display: flex;
+
+}
+#title{
+    position: absolute;
+    width: 20%;
+    background-color: #00b4c3;
+    z-index: 10;
+    margin-top: -10px;
+    border-radius: 10px;
+}
+
+.d-block{
+    color: red;
+}
+
+
+#titleH3{
+    color: white;
+    font-weight: 550;
+    font-size: 0.7cm;
+}
+
+#container_title{
+    background-color: transparent;
+    border: none;
+}
+
+#container_body_info{
+    background-color: #eeeeee;
+}
+
+#container_footer{
+    background-color: #dbdbdb;
+}
+
 #loader {
     position: fixed;
     left: 0px;
@@ -7,4 +44,33 @@
     z-index: 9999;
     background: no-repeat rgb(249,249,249);
     opacity: .8;
+}
+
+#layoutAuthentication_footer{
+    position: absolute;
+    bottom: -10%;
+    width: 100%;
+}
+
+#correo{
+    color: #00b4c3;
+    font-weight: bold;
+}
+
+#inputEmail{
+    border-radius: 50px;
+}
+
+#back_login, #info_footer{
+    color: #00b4c3;
+    font-weight: bold;
+    font-size: medium;
+}
+
+#restore_password{
+    border-radius: 50px;
+    border-color: #ED8337;
+    color: white;
+    background-color: #ED8337;
+    font-size: medium;
 }
