--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/olvido-password/olvido-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/olvido-password/olvido-password.component.html
@@ -1,35 +1,46 @@
+<nav_bar></nav_bar>
+
 <body class="bg-primary">
-    <div id="layoutAuthentication">
-        <div id="layoutAuthentication_content">
-            <main>
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-5">
-                            <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                <div class="card-header"><h3 class="text-center font-weight-light my-4">Recuperación de contraseña</h3></div>
-                                <div class="card-body">
+    <div id="layoutAuthentication" class="h-100">
+        <div id="layoutAuthentication_content" class="h-100">
+            <main class="h-100">
+                <div id="container" class="container" class="d-flex flex-column justify-content-center h-75">
+                    <div id="container_title" class="d-flex justify-content-center align-items-center card-header">
+                        <div id="title" class="col-lg-5">
+                            <h3 id="titleH3" class="text-center font-weight-light my-4">Recuperación de contraseña</h3>
+                        </div>
+                    </div>
+                    <div id="bloque" class="d-flex flex-column justify-content-center align-items-center">
+                        <div class="col-lg-4">
+                            <div id="container_body" class="card shadow-lg border-0 rounded-lg">
+                                <div id="container_body_info"  class="card-body">
                                     <div class="small mb-3 text-muted"></div>
-                                    <div class='{{response_d}}'>
+                                    <div class='mt-4 {{response_d}}'>
                                         {{response_content}}
                                     </div>
                                     <form>
-                                        <div class="form-floating mb-3">
-                                            <input #email class="form-control" id="inputEmail" type="email" placeholder="name@example.com" maxlength="150">
-                                            <label for="inputEmail">Correo electrónico</label>
+                                        <div class="form-floating mt-4 mb-3">
+                                            <input #email class="form-control" id="inputEmail" type="email"
+                                                placeholder="name@example.com" maxlength="150">
+                                            <label id="correo" for="inputEmail">Correo electrónico</label>
                                         </div>
-                                        <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                            <a class="small" href="home">Regresar al login</a>
-                                            <a class="btn btn-primary" (click) = "restablecer(email.value)">Reestablecer contraseña</a>
+                                        <div class="d-flex align-items-center justify-content-around mt-4 mb-4">
+                                            <a id="back_login" class="small" href="home">Regresar al login</a>
+                                            <a id="restore_password" class="btn btn-primary"
+                                                (click)="restablecer(email.value)">Reestablecer contraseña</a>
                                         </div>
                                         <div *ngIf="loanding" id="loader" class="w-100">
-                                            <mat-progress-spinner class="top-50 start-50 translate-middle" id="carga" [color]="color" [mode]="mode">
+                                            <mat-progress-spinner class="top-50 start-50 translate-middle" id="carga"
+                                                [color]="color" [mode]="mode">
                                             </mat-progress-spinner>
                                         </div>
                                     </form>
                                 </div>
-                                <div class="card-footer text-center py-3">
-                                    <div class="small"><a href="registro">Necesita una cuenta? Contactenos!</a></div>
-                                    <div class="small"><a href="login">Ya posee una cuenta? Inicie sesión!</a></div>
+                                <div id="container_footer" class="pt-2 pb-2 card-footer text-center py-3">
+                                    <div class="small"><a id="info_footer" href="registro">Necesita una cuenta?
+                                            Contactenos!</a></div>
+                                    <div class="small"><a id="info_footer" href="login">Ya posee una cuenta? Inicie
+                                            sesión!</a></div>
                                 </div>
                             </div>
                         </div>
@@ -37,7 +48,7 @@
                 </div>
             </main>
         </div>
-        <div id="layoutAuthentication_footer">
+        <div id="layoutAuthentication_footer" class="h-0">
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
@@ -52,7 +63,8 @@
             </footer>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
 
 
