--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.css
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.css
@@ -9,13 +9,85 @@
     opacity: .8;
 }
 
-.error {
+.icon-password{
+  z-index: 10;
+  margin-left: -95px;
+  cursor: pointer;
+  color: #00b4c3
+}
+
+.error, .d-block {
     color: #f82929;
     font-size: 13px;
     margin-top: 2px;
   }
   .icon-password{
     z-index: 10;
-    margin-left: -30px;
+    margin-left: -80px;
     cursor: pointer;
 }
+
+#inputCodigo{
+  width: 350px;
+}
+
+.login-container{
+  margin-top: 50px;
+  margin-bottom: 25px;
+  width: 750px;
+}
+
+.login-header{
+  background-color: #ED8337;
+  color: white;
+  font-family: Roboto;
+  font-style: italic;
+  height: 4.5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-header h3{
+  font-size: 1.5em;
+}
+
+div[class = "card-body"]{
+  background-color: #EEEEEE;
+  height: 350px;
+}
+
+.label-campos{
+  font-weight: 1000;
+  font-size: 16px;
+  color: #00b4c3;
+  margin-left: 8%;
+  opacity:1 !important;
+}
+
+.input-campos{
+  border-radius: 50px;
+  width:90%;
+  margin-left: 5%;
+}
+
+.button-verificar-enviar{
+  color:white;
+  border-color: #00b4c3;
+  background-color: #00b4c3;
+  border-radius: 50px;
+  width: 100px;
+  height: 40px;
+  padding: 1% 2% 1% 2%
+}
+
+.boton-Siguiente{
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 1em !important;
+  margin-bottom: 1em !important;
+}
+
