--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.html
@@ -5,10 +5,10 @@
             <main>
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-lg-7">
+                        <div class="col-lg-7 login-container">
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                <div class="card-header">
-                                    <h3 class="text-center font-weight-light my-4">Llene los datos para la creación de su
+                                <div class="card-header login-header">
+                                    <h3 class="text-center font-weight-light my-4">Llene los datos para la cambiar la contraseña de su
                                         cuenta</h3>
                                 </div>
                                 <div class="card-body">
@@ -18,33 +18,32 @@
                                             {{response_content}}
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-8 mb-3">
-                                                <div class="form-floating">
-                                                    <input #codigo class="form-control" id="inputCodigo" name="codigodireccion"
+                                            <div class="d-flex justify-content-center align-items-center mb-3">
+                                                <div class="form-floating col-lg-8 mt-4">
+                                                    <input #codigo class="form-control input-campos" id="inputCodigo" name="codigodireccion"
                                                         type="password" placeholder="código de verificación"
                                                         formControlName="code">
-                                                    <label for="inputCode">Código de verificación</label>
+                                                    <label class="label-campos" for="inputCode">Código de verificación</label>
+                                                </div>
+                                                <div class="col-lg-2">
+                                                    <input type ="submit"(click) = "enviarCode(codigo.value)" value="Verificar"
+                                                        [disabled]="formRef.control.invalid"
+                                                        class="btn btn-primary btn-block button-verificar-enviar">
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="mt-4 mb-2">
-                                            <div class="d-grid">
-                                                <input type ="submit"(click) = "enviarCode(codigo.value)" value="Verificar"
-                                                    [disabled]="formRef.control.invalid"
-                                                    class="btn btn-primary btn-block">
-                                            </div>
+                                            
                                         </div>
                                     </form>
                                     <form #form2 [formGroup]="restablecerPassword" autocomplete="off" novalidate
                                     #formRef2="ngForm" (ngSubmit)="enviar(password.value)">
-                                        <div class="col-md-8 mb-3">
+                                        <div class="px-5 mt-2 mb-3">
                                             
                                             <div class="form-floating">
                                                 <div class = "d-flex align-items-center">
                                                     <div class="form-floating w-100">
-                                                        <input #password matInput [type]="hide ? 'password' : 'text'" class="form-control" id="inputPassword" name="password"
+                                                        <input #password matInput [type]="hide ? 'password' : 'text'" class="form-control input-campos" id="inputPassword" name="password"
                                                         formControlName="password" placeholder="Ingrese una contraseña" maxlength = "24" >
-                                                        <label for = "inputPassword">Contraseña</label>
+                                                        <label class="label-campos" for = "inputPassword">Contraseña</label>
                                                     </div>
                                                     <a class ="icon-password" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                                                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -60,16 +59,16 @@
                                             </div>
                                         </div>
                                         
-                                        <div class="col-md-8 mb-3">
+                                        <div class="px-5 mt-2 mb-3">
                                             <div class="form-floating">
                                                 <div class = "d-flex align-items-center">
                                                     <div class="form-floating w-100">
-                                                        <input matInput [type]="hideConf ? 'password' : 'text'" class="form-control" id="validatePassword" name="passwordvalidate"
+                                                        <input matInput [type]="hideConf ? 'password' : 'text'" class="form-control input-campos" id="validatePassword" name="passwordvalidate"
                                                         formControlName="confpassword" placeholder="Ingrese su contraseña nuevamente" maxlength="24">
-                                                        <label for="inputvalidatePassword">Valide su contraseña</label>
+                                                        <label class="label-campos" for="inputvalidatePassword">Valide su contraseña</label>
                                                     </div>
                                                     <a class ="icon-password" mat-icon-button matSuffix (click)="hideConf = !hideConf" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                                                        <mat-icon>{{hideConf ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                                                     </a>
                                                 </div>
                                                 <span class="lead error" *ngIf="validacionPassword()">La contraseñas
@@ -78,10 +77,10 @@
                                         </div>
 
                                         <div class="mt-4 mb-0">
-                                            <div class="d-grid">
+                                            <div class="boton-Siguiente d-grid">
                                                 <input type="submit" value="Siguiente"
                                                     [disabled]="formRef2.control.invalid || response_button || validacionPassword()"
-                                                    class="btn btn-primary btn-block">
+                                                    class="btn btn-primary btn-block button-verificar-enviar">
                                             </div>
                                         </div>
                                         <div *ngIf="loanding" id="loader" class="w-100">
